Fix: Broken style while sign in with enabled 2FA (#111)

--- a/src/components/SignIn/SignIn.pcss
+++ b/src/components/SignIn/SignIn.pcss
@@ -14,6 +14,8 @@
     margin: 0 auto;
     border-radius: 4px;
     width: 55%;
+    display: flex;
+    flex-direction: column;
     &__button {
       color: var(--color-white);
       font-size: calc(var(--gap) * 2.66);
@@ -45,6 +47,10 @@
       color: var(--order-error-color);
     }
     &__footer {
+      position: absolute;
+      bottom: -10px;
+      right: 0;
+      left: 0;
       &-create {
         font-size: 14px;
         font-weight: bolder;
